--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+ background-color: silver;
+}
 .App {
   text-align: center;
 }
@@ -35,4 +38,61 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.parentDiv {
+  display: flex;  
+  padding-top: 30px;
+}
+.divLeft {
+  flex: 1.5;
+  margin-left: 15px;
+}
+.divRight {
+  flex: 5;
+  margin-left: 30px;
+  text-align: center;
+}
+
+.marginLeftRignt {
+  min-height: 300px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.divRightInnerDiv {
+  width: 80%;
+}
+.gridMinHeight {
+   min-height: 100px;
+}
+
+.borderBottomBackLog {
+   border-bottom: gray 4px solid;
+}
+
+.borderBottomInProgress {
+  border-bottom: orange 4px solid;
+}
+
+.borderBottomTodo {
+  border-bottom: #2ea1b3 4px solid;
+}
+
+.borderBottomComplete {
+  border-bottom: green 4px solid;
+}
+.cardBg{
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  background-color: rgb(239, 234, 234);
+}
+.cardTitle{
+  text-align: left;
+}
+.IconDiv{
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
 }
